--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -48,5 +48,5 @@ http {
 
   log_format main '$remote_addr - $http_x_forwarded_for - $http_request_id - $remote_user [$time_local] $http_x_forwarded_proto "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
 
-  include {{ nginx_virtual_hosts_path }}/*;
+  include /etc/nginx/sites-enabled/*;
 }
