--- a/roles/nginx/templates/server.conf.j2
+++ b/roles/nginx/templates/server.conf.j2
@@ -1,48 +1,47 @@
 server {
-  listen 80;
-
-  server_name linio.bob$;
-  if ($host ~ "^linio_(.*).bob") {
-    set $mux $1;
-  }
-
-  access_log /var/log/nginx/bob.access.log;
-  error_log /var/log/nginx/bob.error.log;
-
-  gzip on;
-  gzip_min_length 1000;
-  gzip_types text/plain text/xml application/xml;
-
-  client_max_body_size 20m;
-  client_header_timeout 300s;
-  client_body_timeout 300s;
-  send_timeout 300s;
-  keepalive_timeout 300s;
-
-  root /vagrant/repos/shop/bob/public/;
-
-  try_files $uri $uri/ /index.php?$args;
-  index index.html index.php;
-  location / {
-    index index.php;
-  }
-
+    listen   80;
+    server_name ~^(.*).bob$;
+    if ($host ~ "^linio(.*).bob") {
+        set $mux $1;
+    }
+    access_log /var/log/nginx/bob.access.log;
+    error_log /var/log/nginx/bob.error.log;
+    gzip on;
+    gzip_min_length 1000;
+    gzip_types text/plain text/xml application/xml;
+    client_max_body_size 25m;
+    root /vagrant/repos/shop/bob/public;
+    try_files $uri $uri/ /index.php?$args;
+    index index.html index.php;
+    location / {
+        index index.php;
+        #proxy_read_timeout 600;
+    }
+    # Zugriff auf sensible Dateien verwehren
+    location ~ (\.inc\.php|\.tpl|\.sql|\.tpl\.php|\.db)$ {
+        deny all;
+    }
+    # Die htaccess brauchen wir nicht mehr - und wenn sie noch da is
+    # sollte sie nicht angezeigt werden
+    location ~ \.htaccess {
+        deny all;
+    }
+    # Die eigentliche RewriteRule für das Zend Framework
+    if (!-e $request_filename) {
+        rewrite ^.*$ /index.php last;
+    }
   location ~ \.php$ {
-    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-    fastcgi_pass 127.0.0.1:9000;
-    fastcgi_index index.php;
-
-    fastcgi_connect_timeout 300s;
-    fastcgi_send_timeout 300s;
-    fastcgi_read_timeout 300s;
-
-    include fastcgi_params;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param APPLICATION_ENV staging;
-    #fastcgi_param APPLICATION_STORE mx;
-    fastcgi_param HTTPS on;
-    fastcgi_param PHP_VALUE "date.timezone = 'America/Mexico_City'";
+    fastcgi_cache   off;
+    fastcgi_pass    127.0.0.1:9000;
+    fastcgi_index  index.php;
+    include        fastcgi_params;
+    fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param  APPLICATION_ENV dev;
+    fastcgi_param  APPLICATION_MUX $mux;
+    fastcgi_param  APPLICATION_STORE $mux;
+    fastcgi_param  HTTPS $https;
+    proxy_read_timeout 300;
+    proxy_connect_timeout 300;
+    fastcgi_read_timeout 9999;
   }
-
-
 }
