[PROJECT-1] Change username

--- a/roles/bob/templates/parameters.store.ini.j2
+++ b/roles/bob/templates/parameters.store.ini.j2
@@ -7,7 +7,7 @@ resources.multidb.writer.dbname = "{{ bob_item[cl] }}"
 
 ;## READ ##
 resources.multidb.reader.host = "localhost"
-resources.multidb.reader.username = "root"
+resources.multidb.reader.username = "root1"
 resources.multidb.reader.password = ""
 resources.multidb.reader.dbname = "{{ bob_item[cl] }}"
 
